Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         });
 
         settingsTab.addEventListener("click", () => {
-            window.location = "/settings";
+            window.location = "./settings";
         });
 
         /* =========================================================
@@ -321,5 +321,6 @@
     </script>
 
 </body>
+
 
 </html>
